--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vite-template-solid",
+  "name": "embedded-icon-tools-online",
   "version": "0.0.0",
+  "type": "module",
   "description": "",
   "scripts": {
     "start": "vite",
@@ -10,12 +11,20 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.64",
+    "autoprefixer": "^10.4.18",
+    "daisyui": "^4.7.2",
     "solid-devtools": "^0.29.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@iconify/tailwind": "^0.1.4",
+    "@solidjs/router": "^0.13.0",
+    "clsx": "^2.1.0",
+    "rxjs": "^7.8.1",
     "solid-js": "^1.8.11"
   }
 }
